- updated new classes for half-half input fields and middle space - completed account users tab - started working on account fees tab

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,6 +373,11 @@ a.view-all-reports {
 }
 .account-information-col {
     width: auto;
+}
+.percent-icon {
+    margin-right: 10px;
+}
+.first-name, .p-10 {
     padding-right: 10px;
 }
 .nac-process input, .input-me-5 input[type="checkbox"], input[type="radio"] {
